# Retail-Agentic-Commerce

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  env.example  install.sh  nginx.conf  pyproject.toml  sonar-project.properties  stop.sh
.github/workflows/: ci.yml
docs/: NEMO_AGENT_TOOLKIT_DOCUMENTATION.md  features.md
docs/features/: feature-01-project-foundation.md  feature-02-database-schema.md  feature-03-acp-endpoints.md  feature-04-api-security.md  feature-05-psp-payments.md  feature-06-promotion-agent.md  feature-07-recommendation-agent.md  feature-08-post-purchase-agent.md  feature-09-client-simulator.md  feature-10-protocol-inspector.md  feature-11-webhook-integration.md  feature-12-checkout-simulation.md  feature-13-ui-acp-integration.md  feature-14-enhanced-checkout.md  feature-15-multi-language.md  feature-16-apps-sdk.md  feature-17-ucp-integration.md  index.md
openshift/docs/: deploy-openshift.md
src/agents/: AGENTS.md  Dockerfile  README.md  pyproject.toml
src/agents/promotion-agent/: README.md  pyproject.toml  register.py
src/agents/promotion-agent/configs/: config.yml
src/agents/promotion-agent/data/: __init__.py  mock_data.py
src/agents/promotion-agent/tests/: __init__.py  conftest.py  test_tools.py
src/apps_sdk/: events.py  main.py  recommendation_helpers.py  rest_endpoints.py  schemas.py  widget_endpoints.py
src/data/: product_catalog.py
src/merchant/: config.py  main.py
src/payment/: __init__.py  config.py  main.py
src/ui/: Dockerfile  env.example  pnpm-lock.yaml
tests/: conftest.py
(+114 files in other folders)
